editors/MacVim: Update to version 7.3.snapshot53
git-svn-id: https://svn.macports.org/repository/macports/trunk@70949 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/MacVim/Portfile
+++ b/dports/editors/MacVim/Portfile
@@ -3,11 +3,10 @@
 PortSystem          1.0
 
 name                MacVim
-set vim_version     7.2
-set snapshot        52
-set gitcommit       snapshot-${snapshot}
+set vim_version     7.3
+set snapshot        53
+set gitcommit       v${vim_version}-${snapshot}
 version             ${vim_version}.snapshot${snapshot}
-revision            1
 categories          editors
 platforms           darwin
 maintainers         raimue
@@ -17,10 +16,10 @@ long_description \
     better and integrate more seamlessly with the Mac than vim-app.
 homepage            http://code.google.com/p/macvim
 
-master_sites        "http://repo.or.cz/w/MacVim.git?a=snapshot;h=${gitcommit};sf=zip;foo="
-checksums           md5     b935cb2fadd41bba7c385399b62dc355 \
-                    sha1    88fb3057af8ece30edd7e3f00d772952fef390a5 \
-                    rmd160  5d850e969cf7011de459cd9cbcbdd58b179bee29
+master_sites        http://github.com/b4winckler/macvim/zipball/${gitcommit}
+checksums           md5     326e83b3bd265d124c99193ae0c1b7cf \
+                    sha1    914a370884e84e3e01686d88af3fa745a34b446b \
+                    rmd160  ae4c294559dfc2358f8052121c56f3ca2afe432e
 use_zip             yes
 worksrcdir          ${name}
 
@@ -30,6 +29,11 @@ depends_build       bin:gnutar:gnutar \
 depends_lib         port:ncurses \
                     port:libiconv \
                     port:ctags
+
+# github zipball has root folder including commitish, renaming for ease of use
+post-extract {
+    file rename [glob ${workpath}/b4winckler-*] ${worksrcpath}
+}
 
 autoconf.dir ${worksrcpath}/src
 
@@ -116,6 +120,6 @@ variant nls {
 }
 
 livecheck.type          regex
-livecheck.url           http://code.google.com/p/macvim/downloads/list
+livecheck.url           http://github.com/b4winckler/macvim/downloads
 livecheck.version       ${snapshot}
-livecheck.regex         MacVim-snapshot-(\\d+)
+livecheck.regex         snapshot-(\\d+)
