editors/MacVim: Add +python31 variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@70950 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/MacVim/Portfile
+++ b/dports/editors/MacVim/Portfile
@@ -84,17 +84,31 @@ variant perl description {Enable Perl scripting} {
     depends_lib-append      path:bin/perl:perl5
 }
 variant python requires python25 description {Compatibility variant, requires +python25} {}
-variant python25 conflicts python26 description {Enable Python scripting} {
+variant python25 conflicts python26 python27 python31 description {Enable Python scripting} {
     configure.args-append   --enable-pythoninterp --with-python=${prefix}/bin/python2.5
     patchfiles-append       patch-python.diff
     depends_lib-append      port:python25
 
     use_autoconf yes
 }
-variant python26 conflicts python25 description {Enable Python scripting} {
+variant python26 conflicts python25 python27 python31 description {Enable Python scripting} {
     configure.args-append   --enable-pythoninterp --with-python=${prefix}/bin/python2.6
     patchfiles-append       patch-python.diff
     depends_lib-append      port:python26
+
+    use_autoconf yes
+}
+variant python27 conflicts python25 python26 python31 description {Enable Python scripting} {
+    configure.args-append   --enable-pythoninterp --with-python=${prefix}/bin/python2.7
+    patchfiles-append       patch-python.diff
+    depends_lib-append      port:python27
+
+    use_autoconf yes
+}
+variant python31 conflicts python25 python26 python27 description {Enable Python scripting} {
+    configure.args-append   --enable-python3interp --with-python=${prefix}/bin/python3.1
+    patchfiles-append       patch-python3.diff
+    depends_lib-append      port:python31
 
     use_autoconf yes
 }
