py26-qscintilla: version bump to match qscintilla
git-svn-id: https://svn.macports.org/repository/macports/trunk@70952 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-qscintilla/Portfile
+++ b/dports/python/py26-qscintilla/Portfile
@@ -7,8 +7,12 @@ PortSystem          1.0
 # We do not use the 'PortGroup' sugar since this python module is built
 # quite differently than standard python extension modules.
 
+# WARNING: The version of these python bindings must match the version
+#          number of the installed qscintilla port, or configure/building
+#          will fail with strange error messages.
+
 name                py26-qscintilla
-version             2.4.3
+version             2.4.4
 categories          python devel
 maintainers         adfernandes openmaintainer
 description         Python bindings for QScintilla
@@ -29,7 +33,9 @@ master_sites        http://www.riverbankcomputing.com/static/Downloads/QScintill
                     http://www.gtlib.gatech.edu/pub/gentoo/distfiles/ \
                     http://gentoo.osuosl.org/distfiles/
 
-checksums           sha1    772bb3cfca8716e035f2cdc4536d5d8025b855a8
+checksums           md5     db5f21723ea976ddd78c4c3662a21f9c \
+                    sha1    4b6ecb8090a546b14fa4c0ce86ff2c7e97261005 \
+                    rmd160  e56cc02f7b69316cd943705fba9159fa9272aa21
 
 depends_lib         port:qscintilla port:python26 port:py26-pyqt4
 
