eog: update to version 2.30.2, use python26.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70953 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/eog/Portfile
+++ b/dports/gnome/eog/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		eog
-version		2.26.3
+version		2.30.2
 set branch	[join [lrange [split ${version} .] 0 1] .]
 description	An image viewing program.
 long_description        This is the Eye of Gnome, an image viewer program. \
@@ -16,9 +16,9 @@ platforms	darwin
 homepage	http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     0660a0ce0fa4a46656fad84d61895917 \
-                sha1    dce3dc99d3df80bcfad1401bd6efdcd7dfc88e30 \
-                rmd160  53710759e71a304789eaaeeddefa56ac80af8494
+checksums       md5     2f7fdf9392f24229fd82c53e8465f998 \
+                sha1    f2b0f00f9908c2fbbb1088de7263100aa3435b48 \
+                rmd160  56a1d683493e183a86094783a4114dd714fb1666
 
 depends_build   port:pkgconfig \
                 port:intltool \
@@ -28,22 +28,24 @@ depends_build   port:pkgconfig \
 
 depends_lib     port:gnome-desktop \
                 port:gconf \
-                port:libart_lgpl \
                 port:gnome-icon-theme \
                 port:shared-mime-info \
                 port:libexif \
                 port:lcms \
                 port:exempi \
-                port:py25-gtk \
-                port:py25-gobject
+                port:py26-gtk
                
 use_bzip2 	yes
+
+patchfiles      patch-configure.diff
 
 configure.args  --mandir=${prefix}/share/man \
                 --disable-scrollkeeper \
                 --disable-schemas-install
 
-configure.python ${prefix}/bin/python2.5
+configure.python ${prefix}/bin/python2.6
+set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
+configure.pkg_config_path ${python_framework}/lib/pkgconfig
 
 post-activate {
    system "scrollkeeper-update"
