evince: update to version 2.30.3.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70954 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/evince/Portfile
+++ b/dports/gnome/evince/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name            evince
-version         2.26.2
-revision        4
+version         2.30.3
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Evince is a document viewer for multiple document formats like pdf, and many others.
 long_description \
@@ -17,9 +16,9 @@ homepage        http://projects.gnome.org/evince/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     ed8b9fb5c5d6feafd19f0114b736c9ef \
-                sha1    1a789e078b4c95f3e3387a45092ae2f222135013 \
-                rmd160  00dd3dfa006dc019f8f951a356d7260283bf8bab
+checksums       md5     516748897113cd4e9638c49245c555c2 \
+                sha1    381730a6fc66bbd823edbd0aa50b480e5d40f130 \
+                rmd160  67b5a9ba2da16f20946447cfcbd482505b2f4fc0
 
 depends_lib     port:gconf \
                 port:libgnome-keyring \
@@ -52,6 +51,12 @@ configure.args  --disable-scrollkeeper \
 
 configure.ldflags-append -lstdc++
 configure.cflags-append -D__DARWIN_UNIX03=1
+
+#
+# nautilus is not universal
+#
+
+universal_variant no
 
 variant djvu description {Builds against port:djvulibre} {
     configure.args-delete --disable-djvu
