gcalctool: update to version 5.30.2.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70955 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gcalctool/Portfile
+++ b/dports/gnome/gcalctool/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		gcalctool
-version		5.26.3
+version		5.30.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	a GNOME 2 desktop calculator.
 long_description        gcalctool is the desktop calculator that has been proposed \
@@ -15,9 +15,9 @@ platforms	darwin
 homepage	http://calctool.sourceforge.net/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     4208595c1992c50a7f71882a23e76190 \
-                sha1    311b7dda8569e6737af20c3ba61af73582e7ee3a \
-                rmd160  02852922cf88825c8473851bf32fbd33a59a03ff
+checksums       md5     9357de6835da305ee4f0ebad509b509a \
+                sha1    3d0d2f90695dc20fbd3eadddb49f9666fb9eebed \
+                rmd160  af3e031d370f2fc9a88cb821ebe59e9a5913ee2d
 
 use_bzip2	yes
 
@@ -27,7 +27,11 @@ depends_build 	port:pkgconfig \
                 port:gnome-doc-utils
 
 depends_lib 	port:gconf \
-                port:libglade2
+                port:flex \
+                port:bison \
+                port:libxml2
+
+patchfiles      patch-src-gcalcmd.c.diff
 
 configure.args  --disable-scrollkeeper \
                 --disable-schemas-install
