ruby/rb-rubygems: upgrade to 1.3.7
git-svn-id: https://svn.macports.org/repository/macports/trunk@70957 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/ruby/rb-rubygems/Portfile
+++ b/dports/ruby/rb-rubygems/Portfile
@@ -5,10 +5,10 @@ PortGroup		ruby 1.0
 
 name			rb-rubygems
 categories		ruby devel
-version			1.3.5
+version			1.3.7
 
-homepage		http://www.rubygems.org
-master_sites		http://rubyforge.org/frs/download.php/60718/
+homepage		http://rubygems.org/
+master_sites		http://rubyforge.org/frs/download.php/70696/
 
 
 distname                rubygems-${version}
@@ -19,9 +19,9 @@ description		a package management framework for Ruby
 long_description	RubyGems is the Ruby standard for publishing and \
 					managing third party libraries.
 
-checksums		md5     6e317335898e73beab15623cdd5f8cff \
-			sha1    8545f25d00c757a310b879a2580e56d6012fc981 \
-			rmd160  2d17f0de2d387bd2a034916cb79531110f3be196
+checksums		md5     e85cfadd025ff6ab689375adbf344bbe \
+			sha1    68ad2970963db9893b76acc8777be72a77c4bee4 \
+			rmd160  2ea8e16d1535216045798258603d5f2f9e3dbfea
 
 patchfiles		patch-lib_rubygems_commands_setup_command.rb.diff
 
