--- a/dports/multimedia/libgpod/Portfile
+++ b/dports/multimedia/libgpod/Portfile
@@ -4,9 +4,10 @@ PortSystem          1.0
 
 name                libgpod
 version             0.7.2
+revision            1
 categories          multimedia
 platforms           darwin
-maintainers         nomaintainer
+maintainers         rmsfisher openmaintainer
 description         libgpod is a library to access the contents of an iPod.
 long_description    ${description} This library is based on code used in the \
                     gtkpod project. Starting with V0.96.CVS gtkpod depends \
@@ -18,12 +19,18 @@ checksums           md5     1ec69c3a19fb071b1639cdcaf68463c1 \
                     sha1    66c95cec9f8aba92f3472df7429e873d30d0bd79 \
                     rmd160  231b4efd49b8b36e5b644e804a2cd0958b1d3fbf
 
-depends_build       port:pkgconfig
+depends_build       path:bin/pkg-config:pkgconfig
 
-depends_lib         port:gtk2 \
-                    port:p5-xml-parser
+depends_lib         port:p5-xml-parser \
+                    port:py26-gobject
 
-patchfiles          patch-src_Makefile.in.diff
+set python.branch   2.6
+set python.prefix   ${frameworks_dir}/Python.framework/Versions/${python.branch}
+set python.bin      ${python.prefix}/bin/python${python.branch}
+
+configure.args-append  --prefix=${python.prefix}
+configure.env-append    PYGOBJECT_CODEGEN=${python.prefix}/bin/pygobject-codegen-2.0
+configure.pkg_config_path  ${python.prefix}/lib/pkgconfig
 
 livecheck.type		regex
 livecheck.url		http://sourceforge.net/projects/gtkpod/files/
