multimedia/gtkpod upgraded version from 0.99.14 to 1.0.0, fixed faulty python behaviors that led to compilation errors, removed redundant dependencies, added patch to work around lack of endian.h header file
git-svn-id: https://svn.macports.org/repository/macports/trunk@70959 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/gtkpod/Portfile
+++ b/dports/multimedia/gtkpod/Portfile
@@ -4,8 +4,7 @@
 PortSystem          1.0
 
 name                gtkpod
-version             0.99.14
-revision            1
+version             1.0.0
 categories          multimedia gnome
 platforms           darwin
 maintainers         rmsfisher openmaintainer
@@ -13,19 +12,27 @@ description         gtkpod is a platform independent Graphical User Interface fo
 long_description    ${description} It supports the first to fifth Generation including the iPod mini, iPod Photo, iPod Shuffle, iPod nano, and iPod Video.
 homepage            http://www.gtkpod.org/
 master_sites        sourceforge:gtkpod
-checksums           md5     f7948eceb955b302f4c47da4c0e1ec12 \
-                    sha1    92977420c0b54e85ddc80fbe2e99cd4a5e4e81b9 \
-                    rmd160  ec4806918310b3071c33d461af3a354b5826a84c
+checksums           md5     cadd402dcd1cfbedda0357bf24965a7c \
+                    sha1    77b768663458069a414c59b7aad285020c93a035 \
+                    rmd160  271e9aeb25493b89933f203ebce4c004ce0da573
+depends_build       port:pkgconfig
 depends_lib         port:autoconf \
-                    port:curl \
                     port:flex \
-                    port:gnome-vfs \
+                    port:glib2 \
                     port:libglade2 \
                     port:libgpod \
-                    port:openssl \
-                    port:libid3tag
-configure.args      --mandir=${prefix}/share/man --without-ogg --without-flac
-patchfiles          patch-src_Makefile.in.diff
+                    port:libid3tag \
+                    port:mp4v2
+
+set python.branch   2.6
+set python.prefix   ${frameworks_dir}/Python.framework/Versions/${python.branch}
+set python.bin      ${python.prefix}/bin/python${python.branch}
+
+configure.args-append  --prefix=${python.prefix}
+configure.env-append    PYGOBJECT_CODEGEN=${python.prefix}/bin/pygobject-codegen-2.0
+configure.pkg_config_path  ${python.prefix}/lib/pkgconfig
+
+patchfiles          patch-src-mp4file.c.diff
 
 livecheck.type      regex
 livecheck.url       http://sourceforge.net/projects/gtkpod/files/
