ruby/rb-hikidoc: upgrade to 0.0.6
git-svn-id: https://svn.macports.org/repository/macports/trunk@70960 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/ruby/rb-hikidoc/Portfile
+++ b/dports/ruby/rb-hikidoc/Portfile
@@ -3,9 +3,10 @@
 PortSystem		1.0
 PortGroup		ruby 1.0
 
-ruby.setup		hikidoc 0.0.5 setup.rb \
+ruby.setup		hikidoc 0.0.6 setup.rb \
 		{ README README.ja TextFormattingRules TextFormattingRules.ja } \
-				rubyforge:72248
+				rubyforge:72253
+revision		0
 maintainers		kimuraw
 description		HikiDoc is a text-to-HTML conversion tool for web writers.
 long_description	\
@@ -17,9 +18,9 @@ long_description	\
 categories-append	textproc
 platforms		darwin
 homepage        http://projects.netlab.jp/hikidoc/
-checksums		md5 5019a44f31e3cd4cc54a082c9a9826c8 \
-				sha1 f0170bed34aea4ac109778fb4d8a22d33793f584 \
-				rmd160 bef6ccf91513796527289b7abbce7a37a3a76cbf
+checksums		md5 8aef6e67ced329c50ec7221104a897b0 \
+				sha1 080782f4340c5545bc6eabf16a7c738d5e3e24a6 \
+				rmd160 d60b963dfd1542b53db739a8b132e7d8e6249416
 extract.suffix	.tgz
 post-build {
 	reinplace "s|^#!.*ruby|#!${ruby.bin}|" ${worksrcpath}/bin/hikidoc
