--- a/dports/ruby/rb-easyjour/Portfile
+++ b/dports/ruby/rb-easyjour/Portfile
@@ -4,8 +4,9 @@ PortSystem		1.0
 PortGroup		ruby 1.0
 
 ruby.setup		easyjour 0.0.4 gem {} rubyforge_gem
+revision		1
 
-maintainers		kimuraw
+maintainers		kimuraw openmaintainer
 
 platforms		darwin
 description		Super simple access to service announcing and discovery \
@@ -17,6 +18,10 @@ depends_lib		port:rb-dnssd
 license			MIT
 supported_archs	noarch
 
+# patch-lib-easyjour.rb.diff: fix error of Easyjour.serve() with rb-dnssd 1.3.x
+post-destroot {
+	system "cd ${destroot}${prefix}/lib/ruby${ruby.prog_suffix}/gems/${ruby.version}/gems/${ruby.module}-${version} && /usr/bin/patch -p0 < ${filespath}/patch-lib-easyjour.rb.diff"
+}
 checksums		md5 8964adaa435c11d4ddd770530145899d \
 				rmd160 be7fb3834e7a8bf1e4b4c8dbc1e92c7fcc36aac8 \
 				sha1 2134c1ebac5dabb6128e66804b7553b48ab88148
