devel/git-core: Add python26 dependency for git_remote_helpers; /usr/bin/python has been picked up before
git-svn-id: https://svn.macports.org/repository/macports/trunk@70965 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/git-core/Portfile
+++ b/dports/devel/git-core/Portfile
@@ -5,6 +5,7 @@ PortSystem        1.0
 
 name              git-core
 version           1.7.2.2
+revision          1
 description       A fast version control system
 long_description  Git is a fast, scalable, distributed open source version \
                   control system focusing on speed and efficiency.
@@ -28,7 +29,7 @@ checksums    git-${version}${extract.suffix} \
                     rmd160  bd2feb1f74530d44cba834a52adde10b773d8744
 
 depends_run  port:rsync port:p5-error
-depends_lib  path:bin/perl:perl5 port:curl port:zlib port:openssl port:expat port:libiconv
+depends_lib  path:bin/perl:perl5 port:curl port:zlib port:openssl port:expat port:libiconv port:python26
 
 patchfiles   patch-Makefile.diff
 
@@ -43,7 +44,7 @@ set LDFLAGS    "-L${prefix}/lib"
 build.args     CFLAGS="${CFLAGS}" LDFLAGS="${LDFLAGS}" \
                CC=${configure.cc} \
                prefix=${prefix} CURLDIR=${prefix} OPENSSLDIR=${prefix} ICONVDIR=${prefix} \
-               PERL_PATH="${prefix}/bin/perl" NO_FINK=1 NO_DARWIN_PORTS=1 \
+               PERL_PATH="${prefix}/bin/perl" PYTHON_PATH="${prefix}/bin/python2.6" NO_FINK=1 NO_DARWIN_PORTS=1 \
                NO_R_TO_GCC_LINKER=1
 
 test.run       yes
