--- a/dports/net/curl-ca-bundle/Portfile
+++ b/dports/net/curl-ca-bundle/Portfile
@@ -5,6 +5,7 @@ PortSystem              1.0
 name                    curl-ca-bundle
 # keep the version in sync with the curl port
 version                 7.21.1
+revision                1
 set curl_name           curl
 categories              net
 maintainers             ryandesign
@@ -18,8 +19,8 @@ distname                ${curl_name}-${version}
 dist_subdir             ${curl_name}
 set curl_source         ${distname}${extract.suffix}
 set certdata_file       certdata.txt
-set certdata_version    1.64
-set certdata_date       2010-04-08
+set certdata_version    1.65
+set certdata_date       2010-08-27
 set certdata_distfile   certdata-${certdata_version}.txt
 set certdata_path       security/nss/lib/ckfw/builtins/${certdata_file}
 build.target            ca-bundle
@@ -53,9 +54,9 @@ checksums \
         sha1    d6ad8d7caf6e15f318e7b9f69dee8f67c807b1a0 \
         rmd160  3acc531f70adf68ce64bf8ccd198cbc33b6d5246 \
     ${certdata_distfile} \
-        md5     d95f36a39218af7becaf8d775d63adee \
-        sha1    697d7c9599b49384e5e72f19ede7507b94ba1310 \
-        rmd160  9a2509119ef5da1842229f7ec5d71e2bfefeab10
+        md5     b93bd8dd813e4b0c12ddcc44dbfe1dbf \
+        sha1    774c0132ac6920a4f37ce670bed4abcb6e21476c \
+        rmd160  5af26ece6f3e379b247ac8da565d41ff36768972
 
 depends_build \
     path:bin/perl:perl5
