--- a/dports/python/py-sip/Portfile
+++ b/dports/python/py-sip/Portfile
@@ -1,53 +1,56 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
+PortSystem      1.0
 
-name			py-sip
-version			4.10.4
-platforms               macosx
-categories		python devel
-maintainers		blair openmaintainer
-description		create Python bindings for C and C++ libraries
-long_description	SIP is a tool that makes it very easy to create \
-				Python bindings for C and C++ libraries. \
-				It was originally developed to create PyQt, \
-				the Python bindings for the Qt toolkit, \
-				but can be used to create bindings for any \
-				C or C++ library.
+name            py-sip
+version         4.10.4
+categories      python devel
+maintainers     blair openmaintainer
+platforms       macosx
 
-homepage	http://www.riverbankcomputing.co.uk/software/sip/intro
-master_sites	http://www.riverbankcomputing.com/static/Downloads/sip4/ \
-                http://gentoo.mirrors.easynews.com/linux/gentoo/distfiles/ \
-                http://gentoo.osuosl.org/distfiles/ \
-                http://www.gtlib.gatech.edu/pub/gentoo/distfiles/
+description     create Python bindings for C and C++ libraries
+long_description \
+    SIP is a tool that makes it very easy to create \
+    Python bindings for C and C++ libraries. \
+    It was originally developed to create PyQt, \
+    the Python bindings for the Qt toolkit, \
+    but can be used to create bindings for any \
+    C or C++ library.
 
-distname	sip-${version}
+homepage        http://www.riverbankcomputing.co.uk/software/sip/intro
+master_sites \
+    http://www.riverbankcomputing.com/static/Downloads/sip4/ \
+    http://gentoo.mirrors.easynews.com/linux/gentoo/distfiles/ \
+    http://gentoo.osuosl.org/distfiles/ \
+    http://www.gtlib.gatech.edu/pub/gentoo/distfiles/
+
+distname        sip-${version}
 checksums       md5     0d3b59e24dac8343e6135969d5c66793 \
                 sha1    dc2f30cc215c25fb78571c766863ad4649105bb2 \
                 rmd160  e81a7adad365fe6153483219dd2a0c1c48a5a805
 
-dist_subdir	python
+dist_subdir python
 
-depends_lib	port:python24
+depends_lib port:python24
 
 patchfiles      patch-siputils.py.diff
 
-configure.cmd	${prefix}/bin/python2.4 configure.py
+configure.cmd   ${prefix}/bin/python2.4 configure.py
 configure.pre_args  -d ${prefix}/lib/python2.4/site-packages \
-				-e ${prefix}/include/python2.4 \
-				-v ${prefix}/share/sip \
-				-p macx-g++
-configure.post_args	LFLAGS="-F${prefix}/Library/Frameworks -L${prefix}/lib"
+                -e ${prefix}/include/python2.4 \
+                -v ${prefix}/share/sip \
+                -p macx-g++
+configure.post_args LFLAGS="-F${prefix}/Library/Frameworks -L${prefix}/lib"
 
-test.run	yes
-test.cmd	cd siplib && ${prefix}/bin/python2.4 -c 'import sip'
+test.run    yes
+test.cmd    cd siplib && ${prefix}/bin/python2.4 -c 'import sip'
 
 post-destroot {
-	xinstall -m 755 -d ${destroot}${prefix}/share/doc
-	file copy ${worksrcpath}/doc ${destroot}${prefix}/share/doc/${name}
-	xinstall -m 644 -W ${worksrcpath} LICENSE NEWS README TODO \
-		${destroot}${prefix}/share/doc/${name}
-	system "${prefix}/bin/python2.4 ${prefix}/lib/python2.4/compileall.py ${destroot}${prefix}"
-	system "${prefix}/bin/python2.4 -O ${prefix}/lib/python2.4/compileall.py ${destroot}${prefix}"
+    xinstall -m 755 -d ${destroot}${prefix}/share/doc
+    file copy ${worksrcpath}/doc ${destroot}${prefix}/share/doc/${name}
+    xinstall -m 644 -W ${worksrcpath} LICENSE NEWS README TODO \
+        ${destroot}${prefix}/share/doc/${name}
+    system "${prefix}/bin/python2.4 ${prefix}/lib/python2.4/compileall.py ${destroot}${prefix}"
+    system "${prefix}/bin/python2.4 -O ${prefix}/lib/python2.4/compileall.py ${destroot}${prefix}"
 }
