--- a/dports/gnome/libgail-gnome/Portfile
+++ b/dports/gnome/libgail-gnome/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            libgail-gnome
-version         1.20.1
+version         1.20.3
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     An implementation of the ATK interfaces for GNOME widgets.
 long_description \
@@ -16,21 +16,30 @@ platforms       darwin
 homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     5c5b71af5a8ab2a9403bdae52b20e46c \
-                sha1    97bc7dca6130f6dfa76070669b0c46b56d374d24 \
-                rmd160  b4ea4008186c5ca9f4090d1b4b4b6c85a27f1dd0
+checksums       md5     11fde9cc917c2572c87bfda10cc52751 \
+                sha1    c9f7ce61c8726c041b9e69ef0668b0c7d4f50f28 \
+                rmd160  0f6f189f5dfbed68100dd12491a42140f52daa18
 
 patchfiles      patch-Makefile.in.diff
 
-depends_lib    lib:libspi:at-spi \
-               lib:libpanelapplet-2:gnome-panel \
-               port:dbus \
-               port:dbus-glib
+depends_lib     port:at-spi \
+                port:gnome-panel \
+                port:libgnomeui
 
-use_bzip2      yes
+use_bzip2       yes
 
-configure.cppflags-append "-L${prefix}/lib"
-configure.ldflags-append "-lfontconfig -lXft -lXrender -L/usr/X11R6/lib -lX11 -lXinerama -lXrandr -lXext"
+configure.args  --disable-schema-install
+
+#
+# port at-spi is not universal
+#
+
+universal_variant no
+
+post-activate    {
+    system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+        gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
+}
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
