--- a/dports/net/vantages/Portfile
+++ b/dports/net/vantages/Portfile
@@ -40,5 +40,5 @@ depends_lib             port:curl-ca-bundle \
                         port:sqlite3
 
 livecheck.type  regex
-livecheck.url   ${master_sites}
-livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
+livecheck.url   ${homepage}download.html
+livecheck.regex "${name}-(\[0-9.a-d\]+)${extract.suffix}"
