--- a/dports/net/vantages/Portfile
+++ b/dports/net/vantages/Portfile
@@ -27,6 +27,7 @@ master_sites            ${homepage}src/
 checksums               sha1 e78bb8de21f7302335d2d73a5423613593e1d6fa
 extract.suffix          .tgz
 patchfiles              patch-destroot_variable_fix.diff
+universal_variant       no
 
 depends_lib             port:curl-ca-bundle \
                         port:expat \
