vantages: fix mtree violations; see #23881
git-svn-id: https://svn.macports.org/repository/macports/trunk@70978 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/vantages/Portfile
+++ b/dports/net/vantages/Portfile
@@ -4,7 +4,7 @@ PortSystem              1.0
 
 name                    vantages
 version                 0.8.3.1b
-revision        1
+revision                2
 categories              net
 platforms               darwin
 maintainers             nomaintainer
@@ -26,7 +26,7 @@ homepage                http://vantage-points.org/
 master_sites            ${homepage}src/
 checksums               sha1 e78bb8de21f7302335d2d73a5423613593e1d6fa
 extract.suffix          .tgz
-patchfiles              patch-destroot_variable_fix.diff
+patchfiles              patch-makefile_fixes.diff
 universal_variant       no
 
 depends_lib             port:curl-ca-bundle \
