vantages: update to 0.8.5b; see #26270
git-svn-id: https://svn.macports.org/repository/macports/trunk@70980 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/vantages/Portfile
+++ b/dports/net/vantages/Portfile
@@ -3,8 +3,7 @@
 PortSystem              1.0
 
 name                    vantages
-version                 0.8.3.1b
-revision                2
+version                 0.8.5b
 categories              net
 platforms               darwin
 maintainers             nomaintainer
@@ -24,7 +23,8 @@ long_description        Vantages is a suite of services designed to make the ado
 
 homepage                http://vantage-points.org/
 master_sites            ${homepage}src/
-checksums               sha1 e78bb8de21f7302335d2d73a5423613593e1d6fa
+checksums               sha1    6cc7d538b75a778ed1889c89485b72aa85a10298 \
+                        rmd160  6cce5d9f2eb339f7d13661c67e72fd1e50e16708
 extract.suffix          .tgz
 patchfiles              patch-makefile_fixes.diff
 universal_variant       no
