--- a/dports/net/vantages/Portfile
+++ b/dports/net/vantages/Portfile
@@ -7,6 +7,8 @@ version                 0.8.5b
 categories              net
 platforms               darwin
 maintainers             nomaintainer
+license                 BSD
+
 description             A suite of services and tools to make adoption of DNSSEC easier.
 long_description        Vantages is a suite of services designed to make the adoption of \
                         DNSSEC easier for administrators of both authoritative name servers \
