vantages: ensure we're UsingTheRightCompiler; see #23883
git-svn-id: https://svn.macports.org/repository/macports/trunk@70983 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/vantages/Portfile
+++ b/dports/net/vantages/Portfile
@@ -42,6 +42,8 @@ depends_lib             port:curl-ca-bundle \
                         port:p5-term-readkey \
                         port:sqlite3
 
+build.args              CC="${configure.cc}"
+
 livecheck.type  regex
 livecheck.url   ${homepage}download.html
 livecheck.regex "${name}-(\[0-9.a-d\]+)${extract.suffix}"
