pth: support build_arch
git-svn-id: https://svn.macports.org/repository/macports/trunk@70986 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/pth/Portfile
+++ b/dports/devel/pth/Portfile
@@ -28,21 +28,19 @@ configure.args      --mandir=${prefix}/share/man
 
 post-configure {
     if {[variant_isset universal]} {
-        reinplace "s|CC -dynamiclib|CC -dynamiclib ${configure.universal_ldflags}|g" ${worksrcpath}/libtool
+        set archflags ${configure.universal_ldflags}
+    } else {
+        set archflags ${configure.ld_archflags}
     }
+    reinplace "s|CC -dynamiclib|CC -dynamiclib ${archflags}|g" ${worksrcpath}/libtool
 }
 
 use_parallel_build  no
 
 post-destroot {
-    if {[variant_isset universal]} {
-        if {${configure.universal_cppflags} != ""} {
-            reinplace "s|${configure.universal_cppflags}||g" \
-                ${destroot}${prefix}/bin/pth-config
-        }
-        reinplace "s|${configure.universal_ldflags}||g" \
-            ${destroot}${prefix}/bin/pth-config
-    }
+    reinplace -E {s|-arch [a-z0-9_]+||g} \
+        ${destroot}${prefix}/bin/pth-config
+    
     xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
     xinstall -m 644 -W ${worksrcpath} ANNOUNCE AUTHORS ChangeLog COPYING \
         HACKING HISTORY INSTALL NEWS PORTING README SUPPORT TESTS THANKS \
