lang/ruby19: fix #22866, ruby19 +universal not works.     the configure option "--with-arch" introduced at 1.9.2 enables     universal binaries. like this:
      ./configure --with-arch=i386,x86_64


git-svn-id: https://svn.macports.org/repository/macports/trunk@70988 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/ruby19/Portfile
+++ b/dports/lang/ruby19/Portfile
@@ -104,6 +104,10 @@ variant mactk conflicts tk description "Build using Mac OS X Tk Framework" {
 		configure.args-append   --enable-tcltk-framework
 }
 
+variant universal {
+		configure.args-append   --with-arch=[join ${universal_archs} ,]
+}
+
 livecheck.type	regex
 livecheck.url	http://ftp.ruby-lang.org/pub/ruby/1.9/
 livecheck.regex	ruby-(${version})${extract.suffix}
