gpgme: support build_arch
git-svn-id: https://svn.macports.org/repository/macports/trunk@70989 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gpgme/Portfile
+++ b/dports/devel/gpgme/Portfile
@@ -39,8 +39,11 @@ configure.args      --with-gpg=${prefix}/bin/gpg --enable-static
 
 post-configure {
     if {[variant_isset universal]} {
-        reinplace "s|CC -dynamiclib|CC -dynamiclib ${configure.universal_ldflags}|g" ${worksrcpath}/libtool
+        set archflags ${configure.universal_ldflags}
+    } else {
+        set archflags ${configure.ld_archflags}
     }
+    reinplace "s|CC -dynamiclib|CC -dynamiclib ${archflags}|g" ${worksrcpath}/libtool
 }
 
 test.run    yes
