--- a/dports/net/vantages/Portfile
+++ b/dports/net/vantages/Portfile
@@ -4,6 +4,7 @@ PortSystem              1.0
 
 name                    vantages
 version                 0.8.5b
+revision                1
 categories              net
 platforms               darwin
 maintainers             nomaintainer
@@ -28,7 +29,11 @@ master_sites            ${homepage}src/
 checksums               sha1    6cc7d538b75a778ed1889c89485b72aa85a10298 \
                         rmd160  6cce5d9f2eb339f7d13661c67e72fd1e50e16708
 extract.suffix          .tgz
-patchfiles              patch-makefile_fixes.diff
+
+patchfiles              patch-makefile_fixes.diff \
+                        patch-bad_paths.diff
+
+# /usr/bin/ranlib: library member: libshttpd.a(compat_unix.c) is not an object file (not allowed in a library with multiple architectures)
 universal_variant       no
 
 depends_lib             port:curl-ca-bundle \
@@ -42,7 +47,17 @@ depends_lib             port:curl-ca-bundle \
                         port:p5-term-readkey \
                         port:sqlite3
 
-build.args              CC="${configure.cc}"
+use_autoreconf          yes
+
+configure.universal_args-delete --disable-dependency-tracking
+
+if {[variant_exists universal] && [variant_isset universal]} {
+    set archflags ${configure.universal_cflags}
+} else {
+    set archflags ${configure.cc_archflags}
+}
+
+build.args              CC="${configure.cc} ${archflags}"
 
 livecheck.type  regex
 livecheck.url   ${homepage}download.html
