isightcapture: record universal_archs correctly in the registry, and support non-universal installs
git-svn-id: https://svn.macports.org/repository/macports/trunk@70991 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/isightcapture/Portfile
+++ b/dports/sysutils/isightcapture/Portfile
@@ -4,7 +4,7 @@ PortSystem              1.0
 
 name                    isightcapture
 version                 1.1
-revision                1
+revision                2
 set version2            [strsed ${version} {g/[.]/_/}]
 categories              sysutils graphics
 platforms               macosx
@@ -12,6 +12,7 @@ use_parallel_build      no
 maintainers             ryandesign
 license                 freeware
 supported_archs         i386 ppc
+configure.universal_archs i386 ppc
 
 homepage                http://www.intergalactic.de/pages/iSight.html
 master_sites            http://www.intergalactic.de/pages/iSight_files/
@@ -34,7 +35,11 @@ checksums               md5     b0adf800e285ca0bc46f20d2450d45fa \
 
 use_configure           no
 
-build {}
+build {
+    if {![variant_isset universal]} {
+        system "cd ${worksrcpath} && lipo -extract ${configure.build_arch} ${name} -output ${name}"
+    }
+}
 
 destroot {
     xinstall -W ${worksrcpath} ${name} ${destroot}${prefix}/bin
@@ -42,13 +47,7 @@ destroot {
     xinstall -m 644 -W ${worksrcpath} ${name}.rtf ${destroot}${prefix}/share/doc/${name}
 }
 
-default_variants +universal
 variant universal {}
-pre-fetch {
-    if {![variant_isset universal]} {
-        return -code error "${name} is only available in a universal version"
-    }
-}
 
 livecheck.type          regex
 livecheck.version       ${version2}
