--- a/dports/science/gmt/Portfile
+++ b/dports/science/gmt/Portfile
@@ -4,8 +4,7 @@
 PortSystem                  1.0
 
 name                        gmt
-version                     4.5.2
-revision                    1
+version                     4.5.3
 categories                  science
 maintainers                 takeshi
 license                     GPLv2
@@ -27,24 +26,29 @@ master_sites                ftp://ftp.soest.hawaii.edu/gmt          \
                             ftp://mirror.geosci.usyd.edu.au/pub/gmt \
                             ftp://gmt.mirror.ac.za/pub/gmt
 use_bzip2                   yes
-set gshhsversion            2.0.2
+set gshhsversion            2.1.0
 set gmtsrc                  GMT${version}_src.tar.bz2
 set gmtshare                GMT${version}_share.tar.bz2
 set gmtsuppl                GMT${version}_suppl.tar.bz2
 set gshhslow                GSHHS${gshhsversion}_coast.tar.bz2
 distfiles                   ${gmtsrc} ${gmtshare} ${gmtsuppl} ${gshhslow}
-checksums                   ${gmtsrc}   md5     1cecd3588a117e19f82a3fbf46ed094d \
-                            ${gmtsrc}   sha1    85b39caf655f22327839ce10c4d03c1b87c7fe15 \
-                            ${gmtsrc}   rmd160  71d6e4538dd855916fadeb02cfb944b1d1e6e6c0 \
-                            ${gmtshare} md5     101ec440d66fe9cee4689272cf29d1ec \
-                            ${gmtshare} sha1    346495f5ff006a318a39099573b0a5e408995d63 \
-                            ${gmtshare} rmd160  62ee2946ed3e24cdf5580835d4f786ae06754ee1 \
-                            ${gmtsuppl} md5     f61a1109a7a6119524e70efb6047b614 \
-                            ${gmtsuppl} sha1    0ba932f93f27c7dc27a06305ead8dba36b619004 \
-                            ${gmtsuppl} rmd160  9f226e2e4b45e9f69889ec5819a5aa187d5fb5f9 \
-                            ${gshhslow} md5     5edeabc967ea6c25b4d56c309c1e0676 \
-                            ${gshhslow} sha1    d2d3aa32d3acb4b5365c1959f06dedbf574038c2 \
-                            ${gshhslow} rmd160  95fb1acefadac39448714508aaedf91aca1c55c8
+checksums           ${gmtsrc} \
+                    md5     ad069cfcc8216fdef69e0cb94536c2a6 \
+                    sha1    b801316b08339d572905487cdb0d66b8236b7ecf \
+                    rmd160  43a015ba87817f7540d3fb34c2cd676d7bfc5ff5 \
+                    ${gmtshare} \
+                    md5     378ea1b0e46b09455722df81c4c191ab \
+                    sha1    a77559af20edea3a79f7a636671539e3040a5aea \
+                    rmd160  a664bee612593cfe0488348fd589a69574909756 \
+                    ${gmtsuppl} \
+                    md5     7d4bcb2ac56ee558cae8446363a74e64 \
+                    sha1    c9feaa2f63052ec3ccbf125f5439e8f315d72f37 \
+                    rmd160  dc5b1122c8725017af3aba154330a6094d46ccd5 \
+                    ${gshhslow} \
+                    md5     1f84a99effe96e12fb60f31fa3cf35bb \
+                    sha1    507dee527314e003039722e389052d2705f849d9 \
+                    rmd160  eba4e7d1795092dc7508309f4e1b0f9c88c26b42
+
 worksrcdir                  GMT${version}
 
 depends_lib                 port:netcdf
@@ -87,20 +91,24 @@ variant gshhs description {installs high and full resolution GSHHS coast line da
     set gshhshigh GSHHS${gshhsversion}_high.tar.bz2
     set gshhsfull GSHHS${gshhsversion}_full.tar.bz2
     distfiles-append        ${gshhshigh} ${gshhsfull}
-    checksums-append        ${gshhshigh} md5     f3602576cdad97f513b5baf3ec476f51 \
-                            ${gshhshigh} sha1    7b147470c2909d3b8ffb5cb87c467724ac0d1634 \
-                            ${gshhshigh} rmd160  a30f09aa4d6d4cfeec15fa5d625572c79f55fb38 \
-                            ${gshhsfull} md5     d15b8727b38741ca2a7d777ff72a42d0 \
-                            ${gshhsfull} sha1    9c41ddcb5853f163544b48fe0204bbbdd4e20ff3 \
-                            ${gshhsfull} rmd160  9988a695d1f45b5b4d8242d28199f8ff772a2595
+    checksums-append \
+                    ${gshhshigh} \
+                    md5     51128a3c545fd48364a2da830ebce1b6 \
+                    sha1    a1f8ac81195b3dd45a145ec0b3f58398be0659d0 \
+                    rmd160  94da01ab434eb9693c5b4a308fe2e29bc3f6d824 \
+                    ${gshhsfull} \
+                    md5     da679a412056e401bb624a213d4b11d6 \
+                    sha1    bda0300d59ef082c19fda0563899adb42113e2bf \
+                    rmd160  702a17c7542c075878af8a0b83c03a91afae118d
 }
 
 variant doc description {installs documentation, examples and tutorial} {
     set gmtdoc GMT${version}_doc.tar.bz2
     distfiles-append        ${gmtdoc}
-    checksums-append        ${gmtdoc}   md5     ee97a570d6d18459ed5eb8eb1c4bcfe0 \
-                            ${gmtdoc}   sha1    2f030349bafe376526359336dfcb459e8ab60fe6 \
-                            ${gmtdoc}   rmd160  f18689a2d879e7cde16985e4e4c7f0274d09657c
+    checksums-append        ${gmtdoc} \
+                    md5     a2f0243bbbea4c6e1472a1d92a2c6d7c \
+                    sha1    b573b26a0f6b46758ba5e84ad7c6274f91c0457c \
+                    rmd160  c14aa0092060510b597bff0c277b8c12cdb210bd
 }
 
 variant octave description {compiles Octave interface} {
@@ -112,9 +120,11 @@ variant octave description {compiles Octave interface} {
 variant triangle description {use J. Shewchuk's fast, non-GPL triangulation routine} {
     set gmttri GMT${version}_triangle.tar.bz2
     distfiles-append        ${gmttri}
-    checksums-append        ${gmttri} md5     c346c207e5d2c80bfaf8a957a9756cb0 \
-                            ${gmttri} sha1    0363101d0f1ce79f90dd0517e8d227cfa5d2b537 \
-                            ${gmttri} rmd160  1b29be1183ad8b0f7c8650b550bfb66b171c6a6b
+    checksums-append        ${gmttri} \
+                    md5     5bccc9d473fc2a659cb21d3aafd8b228 \
+                    sha1    451d8e2d09673dd72dfb249ca3630c5989256475 \
+                    rmd160  7359ece268bdd3e48214bda9d840659980e4c1ea
+
     configure.args-append   --enable-triangle
 }
 
