--- a/dports/www/yaws/files/patch-scripts-yaws.conf.template
+++ b/dports/www/yaws/files/patch-scripts-yaws.conf.template
@@ -1,5 +1,5 @@
---- scripts/yaws.conf.template.orig	2009-11-11 12:59:41.000000000 +0200
-+++ scripts/yaws.conf.template	2009-11-11 13:08:39.000000000 +0200
+--- scripts/yaws.conf.template.orig	2010-03-18 16:02:47.000000000 -0500
++++ scripts/yaws.conf.template	2010-08-29 03:57:15.000000000 -0500
 @@ -15,7 +15,7 @@
  # beam code can be placed. The daemon will add this
  # directory to its search path
@@ -18,7 +18,7 @@
  
  # Set this to an integer value to control
  # max number of connections from clients into the server
-@@ -123,34 +123,34 @@
+@@ -130,35 +130,35 @@
          appmods = <cgi-bin, yaws_appmod_cgi>        
  </server>
  
@@ -35,7 +35,6 @@
 -                user = baz:bar
 -        </auth>
 -</server>
--
 +# <server localhost>
 +#         port = %port%
 +#         listen = 0.0.0.0
@@ -51,7 +50,8 @@
 +# </server>
  
  
--# And then an ssl server
+ 
+ # And then an ssl server
  
 -<server %host%>
 -        port = %sslport%
@@ -61,10 +61,9 @@
 -        <ssl>  
 -                keyfile = %certdir%/yaws-key.pem
 -                certfile = %certdir%/yaws-cert.pem
+-                depth = 0
 -        </ssl>
 -</server>
-+# # And then an ssl server
-+# 
 +# <server %host%>
 +#         port = %sslport%
 +#         docroot = __PREFIX/tmp
@@ -73,6 +72,7 @@
 +#         <ssl>  
 +#                 keyfile = %certdir%/yaws-key.pem
 +#                 certfile = %certdir%/yaws-cert.pem
++#                 depth = 0
 +#         </ssl>
 +# </server>
                                  
