yaws: use notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@71001 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/yaws/Portfile
+++ b/dports/www/yaws/Portfile
@@ -59,9 +59,9 @@ post-destroot {
 	file rename "${destroot}${prefix}/etc/yaws/yaws.conf" "${destroot}${prefix}/etc/yaws/yaws.conf.template"
 }
 
-post-install {
-	ui_msg "Copy and customize ${prefix}/etc/yaws/yaws.conf.template to ${prefix}/etc/yaws/yaws.conf"
-}
+notes "\
+Copy and customize ${prefix}/etc/yaws/yaws.conf.template to ${prefix}/etc/yaws/yaws.conf\
+"
 
 startupitem.create	yes
 startupitem.name	yaws
