python/py27-tz: update to 2010l
git-svn-id: https://svn.macports.org/repository/macports/trunk@71004 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py27-tz/Portfile
+++ b/dports/python/py27-tz/Portfile
@@ -6,7 +6,7 @@ PortGroup       python27 1.0
 
 name            py27-tz
 set my_name     pytz
-version         2010k
+version         2010l
 categories      python devel
 platforms       darwin
 supported_archs noarch
@@ -23,9 +23,9 @@ master_sites    http://cheeseshop.python.org/packages/source/p/pytz/
 distname        ${my_name}-${version}
 use_bzip2       yes
 
-checksums       md5     f63890cc071d369e06e6e82ad31bfca2 \
-                sha1    314388ea23b9347fd9955ed2801560512b25fa80 \
-                rmd160  15445e40b7448aa46956cc424ad438fbc3b0b255
+checksums       md5     8ea38ffd627f2169b597442928ea5967 \
+                sha1    5303ed823d3a05315bb2e6120211b46364cc539e \
+                rmd160  b1bf03cfa5b4bdfdeed42136e09edf705f2c9b0d
 
 post-destroot {
     set docdir ${prefix}/share/doc/${name}-${version}
