gnome-backgrounds: update to version 2.30.0.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71015 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-backgrounds/Portfile
+++ b/dports/gnome/gnome-backgrounds/Portfile
@@ -4,11 +4,13 @@
 PortSystem      1.0
 
 name            gnome-backgrounds
-version         2.28.0
+version         2.30.0
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      gnome
 platforms       darwin 
+supported_archs noarch
+
 description     A collection of backgrounds for GNOME 2.
 
 long_description \
@@ -18,13 +20,11 @@ homepage        http://www.gnome.org/
 master_sites    gnome:sources/$name/$branch/
 use_bzip2       yes
 
-checksums       md5     a137eae321c12ba253a1ce55b13b622d \
-                sha1    834b9b35c4679e65c758298ffb379b674dd689ea \
-                rmd160  fe4b72694700c57222146521f9188074fd83c6ca
+checksums       md5     4d620b0d0b6498eceacaef018abdcad2 \
+                sha1    6078138a77a634419faa587218ff72d93fb6fb75 \
+                rmd160  839817c21defbccbd76cb037edd4abe66df30be8
 
 depends_build   port:intltool
-
-universal_variant   no
 
 livecheck.type  regex
 livecheck.url   ftp://ftp.gnome.org/pub/gnome/sources/$name/$branch/
