--- a/dports/multimedia/gtkpod/Portfile
+++ b/dports/multimedia/gtkpod/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                gtkpod
 version             1.0.0
+revision            1
 categories          multimedia gnome
 platforms           darwin
 maintainers         rmsfisher openmaintainer
@@ -24,13 +25,25 @@ depends_lib         port:autoconf \
                     port:libid3tag \
                     port:mp4v2
 
+# python-related tweaks 
 set python.branch   2.6
 set python.prefix   ${frameworks_dir}/Python.framework/Versions/${python.branch}
 set python.bin      ${python.prefix}/bin/python${python.branch}
-
 configure.args-append  --prefix=${python.prefix}
 configure.env-append    PYGOBJECT_CODEGEN=${python.prefix}/bin/pygobject-codegen-2.0
 configure.pkg_config_path  ${python.prefix}/lib/pkgconfig
+options         python.link_binaries python.link_binaries_suffix
+default python.link_binaries yes
+default python.link_binaries_suffix {-${python.branch}}
+post-destroot {
+    if {${python.link_binaries}} {
+        foreach bin [glob -nocomplain -tails -directory "${destroot}${python.prefix}/bin" *] {
+            if {[catch {file type "${destroot}${prefix}/bin/${bin}${python.link_binaries_suffix}"}]} {
+                ln -s "${python.prefix}/bin/${bin}" "${destroot}${prefix}/bin/${bin}${python.link_binaries_suffix}"
+            }
+        }
+    }
+}
 
 patchfiles          patch-src-mp4file.c.diff
 
