devel/bzr: Add +bash_completion variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@71018 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/bzr/Portfile
+++ b/dports/devel/bzr/Portfile
@@ -50,6 +50,16 @@ post-destroot {
         ${destroot}${prefix}/share/doc/${name}
 }
 
+variant bash_completion {
+    depends_run-append  port:bash-completion
+
+    post-destroot {
+        xinstall -d ${destroot}${prefix}/etc/bash_completion.d
+        xinstall -m 644 ${worksrcpath}/contrib/bash/bzr \
+            ${destroot}${prefix}/etc/bash_completion.d/bzr
+    }
+}
+
 universal_variant no
 
 livecheck.type      regex
