--- a/dports/net/scotty/files/patch-Makefile.in
+++ b/dports/net/scotty/files/patch-Makefile.in
@@ -1,5 +1,5 @@
---- unix/Makefile.in.org	2006-04-28 13:14:01.000000000 -0700
-+++ unix/Makefile.in	2006-04-28 13:38:04.000000000 -0700
+--- unix/Makefile.in.orig	2003-06-03 14:44:59.000000000 -0500
++++ unix/Makefile.in	2010-08-29 19:17:48.000000000 -0500
 @@ -56,7 +56,7 @@
  
  # To change the compiler switches, for example to change from -O
@@ -9,6 +9,15 @@
  
  # NMICMPD should contain the full path to the installed nmicmpd binary.
  NMICMPD = $(BIN_INSTALL_DIR)/nmicmpd
+@@ -122,7 +122,7 @@
+ # Linker switch(es) to link platform depended library archives (the
+ # configure script will try to set this value automatically, but you
+ # can override it).
+-LIBS = @LIBS@ # -lresolv
++LIBS = @LIBS@ -lresolv
+ 
+ # Linker switch(s) to link platform depended library archives for
+ # package utilities (the configure script will try to set this value
 @@ -175,7 +175,7 @@
  
  # Base command to use for combining object files into a shared
