gnome-applets: update to version 2.30.0, use python26.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71021 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-applets/Portfile
+++ b/dports/gnome/gnome-applets/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            gnome-applets
-version         2.26.3
+version         2.30.0
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     GNOME panel applets.
 long_description This package contains applets for use with the \
@@ -15,13 +15,12 @@ platforms       darwin
 homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     23fb47b3e35ef2136d6ade3f0203328b \
-                sha1    52279066e6b0e0af664b4cf6404123bf51fe2791 \
-                rmd160  34035faeac68a44433a3a558963f2b571e650c41
+checksums       md5     2afcbedc10b1a0e8072ac4eefdc8d770 \
+                sha1    b6359ebe1991709c66709b108609fcb8cfae4b57 \
+                rmd160  ad3c2bb2062de7599a8a34403bf517be21f9abae
 
 depends_build   port:pkgconfig \
                 port:intltool \
-                port:p5-xml-parser \
                 port:gnome-doc-utils
 
 depends_lib     port:gnome-icon-theme \
@@ -35,16 +34,16 @@ depends_lib     port:gnome-icon-theme \
                 port:libnotify \
                 port:policykit-gnome \
                 port:gucharmap \
-                port:py25-gtk \
-                port:py25-gobject \
-                port:py25-gnome \
+                port:py26-gtk \
                 port:libxml2 \
                 port:libgweather \
                 port:gst-plugins-base
 
 use_bzip2 	yes
 
-configure.python  ${prefix}/bin/python2.5
+configure.python  ${prefix}/bin/python2.6
+set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
+configure.pkg_config_path ${python_framework}/lib/pkgconfig
 
 configure.args  --without-hal \
                 --enable-mixer-applet \
@@ -55,6 +54,12 @@ configure.args  --without-hal \
                 --x-libraries=${prefix}/lib \
                 --disable-scrollkeeper \
                 --disable-schemas-install
+
+#
+# gnome-panel is not universal
+#
+
+universal_variant no
 
 post-activate {
    system "scrollkeeper-update"
