zorba: update to 1.4.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@71022 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/zorba/Portfile
+++ b/dports/textproc/zorba/Portfile
@@ -5,7 +5,7 @@ PortGroup       archcheck 1.0
 PortGroup       cmake 1.0
 
 name            zorba
-version         1.0.0
+version         1.4.0
 license         Apache-2
 categories      textproc devel
 platforms       darwin
@@ -26,9 +26,9 @@ long_description \
 homepage        http://www.zorba-xquery.com/
 master_sites    sourceforge
 
-checksums       md5     79c3ff5ae9016b0bc203c96175b3c281 \
-                sha1    0d8ec92881a501f686f8ecd42d1546c6ff2f2b58 \
-                rmd160  dd4ac37f0e19d9ae2988a6b3eab4b9385e8db634
+checksums       md5     ee2130e52f9aa7b03b17a91acff33b83 \
+                sha1    3444b1c82e1a149efc61769af1f8a0aa1a6c7a48 \
+                rmd160  67fc76f41c9e31bb452edb9e942c7fbbb787596a
 
 # In-source-builds are not allowed
 worksrcdir      ${distname}/build
@@ -39,30 +39,19 @@ post-extract {
 
 patch.dir       ${worksrcpath}/..
 
-patchfiles \
-    patch-SchemaValidatorFilter-resolveQName.diff \
-    patch-XMLValid-NoSubforBlock.diff
-
 post-patch {
     # Do not install dependencies' libraries
     reinplace s/APPLE/FALSE/ ${patch.dir}/src/CMakeLists.txt
-
-    # Disable erroneous Apple-specific flags
-    reinplace {s/( *APPLE *)/(FALSE)/} ${patch.dir}/CMakeCompiler.txt
 
     # XMLScanner::loadGrammar's toCache argument is optional
     reinplace {s/toCache/toCache = false/} \
         ${patch.dir}/src/types/schema/SchemaValidatorFilter.h
 
-    # Install documentation in a unversioned directory
+    # Install documentation in an unversioned directory
     reinplace {s/zorba-[^/)]*/zorba/} \
         ${patch.dir}/doc/c/examples/CMakeLists.txt \
         ${patch.dir}/doc/CMakeLists.txt \
         ${patch.dir}/doc/cxx/examples/CMakeLists.txt
-
-    # Disable SWIG bindings documentation
-    reinplace /FIND_PACKAGE(SWIG)/d \
-        ${patch.dir}/doc/CMakeLists.txt
 }
 
 depends_build-append \
