--- a/dports/comms/zssh/Portfile
+++ b/dports/comms/zssh/Portfile
@@ -46,3 +46,7 @@ post-destroot {
         TODO \
         ${docdir}
 }
+
+livecheck.type          regex
+livecheck.url           http://sourceforge.net/projects/${name}/files/
+livecheck.regex         /${name}-(\[0-9a-z.\]+)\\${extract.suffix}
