vtk5: use branch variable
git-svn-id: https://svn.macports.org/repository/macports/trunk@71025 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/vtk5/Portfile
+++ b/dports/graphics/vtk5/Portfile
@@ -43,8 +43,8 @@ configure.args  \
         -DBUILD_SHARED_LIBS:BOOL=ON \
         -DVTK_USE_RPATH:BOOL=ON \
         -DCMAKE_BUILD_WITH_INSTALL_RPATH:BOOL=ON \
-        -DCMAKE_INSTALL_RPATH:STRING=${prefix}/lib/vtk-5.2 \
-        -DCMAKE_INSTALL_NAME_DIR:STRING=${prefix}/lib/vtk-5.2 \
+        -DCMAKE_INSTALL_RPATH:STRING=${prefix}/lib/vtk-${branch} \
+        -DCMAKE_INSTALL_NAME_DIR:STRING=${prefix}/lib/vtk-${branch} \
         -DCMAKE_INSTALL_RPATH_USE_LINK_PATH:BOOL=ON \
         -DCMAKE_LIBRARY_PATH:PATH=${prefix}/lib \
         -DCMAKE_INCLUDE_PATH:PATH=${prefix}/include \
