--- a/dports/gnome/gobject-introspection/Portfile
+++ b/dports/gnome/gobject-introspection/Portfile
@@ -23,7 +23,7 @@ checksums           md5     f79a70e9461416ad630d34c8a35c7fe0 \
 
 depends_build       port:pkgconfig
 
-depends_lib         port:cairo \
+depends_lib         path:lib/pkgconfig/cairo.pc:cairo \
                     path:${prefix}/lib/pkgconfig/glib-2.0.pc:glib2 \
                     port:libffi
 
