py26-cairo: Update Version 1.8.8 -> 1.8.10. Add openmaintainer. Fixes #25195.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71027 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-cairo/Portfile
+++ b/dports/python/py26-cairo/Portfile
@@ -4,11 +4,11 @@
 PortSystem      1.0
 
 name            py26-cairo
-set my_name     pycairo
-version         1.8.8
+set my_name     py2cairo
+version         1.8.10
 categories      python x11
 platforms       darwin
-maintainers     mcalhoun
+maintainers     mcalhoun openmaintainer
 description     Pycairo is set of Python bindings for the cairo graphics library
 
 long_description \
@@ -17,15 +17,14 @@ long_description \
 homepage        http://cairographics.org/pycairo/
 master_sites    http://cairographics.org/releases/
 distname        ${my_name}-${version}
+worksrcdir         pycairo-${version}
 
-checksums       \
-    md5     054da6c125cb427a003f5fd6c54f853e \
-    sha1    b127ed59bd876ca0fe5d0cf0f69735835c599e9b \
-    rmd160  d7e40be061140992e05f714b45182c498ae19311
+checksums           md5     87421a6a70304120555ba7ba238f3dc3 \
+                    sha1    6bb0b3e0249bce9fc0480aadad0c602d32f26ec1 \
+                    rmd160  932e19f2f582bdf5735bdc92720b76edfb0a0c8e
 
 depends_build   port:pkgconfig
-depends_lib     port:python26 \
-                path:lib/pkgconfig/cairo.pc:cairo \
+depends_lib     path:lib/pkgconfig/cairo.pc:cairo \
                 port:py26-numpy
 
 configure.python    ${prefix}/bin/python2.6
@@ -50,4 +49,4 @@ post-destroot {
 
 livecheck.type   regex
 livecheck.url    http://cairographics.org/releases/
-livecheck.regex  LATEST-pycairo-(\\d+(?:\\.\\d+)*)
+livecheck.regex "${my_name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
